タスク一覧ページ 終了

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -56,6 +56,7 @@ p {
   background-color: teal;
 }
 
+
 #logo {
   float: left;
   margin-right: 10px;
@@ -71,9 +72,14 @@ p {
   }
 }
 
+
+ul {
+  font-weight: 900;
+}
+
 li .header-list {
-  color: #fff !important;
-  font-weight: bold;
+  color: #FFF !important;
+  font-weight: 900;
   &:hover {
     color: silver !important;
   }
@@ -85,9 +91,10 @@ li .header-list {
 
 li .dropdown-header {
   background-color: rgba(200, 200, 200, 0.5);
-  font-weight: bold;
+  font-weight: 900;
 }
   
+
 
 
 /* デバッグウインドウ */
