--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,34 @@
-<h1></h1>
+<% provide(:title, current_user.name) %>
 
-<div class="tasks-index">
-  <% @tasks.each do |task| %>
-    <div class="tasks-index-item">
-      <%= task.content%>
+<h1><%= current_user.name%>のタスク一覧</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+    <%= link_to "タスク新規作成", new_user_task_path, class: "btn btn-lg btn-primary pull-right" %>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>名称</th>
+          <th>作成日</th>
+          <th></th>
+        </tr>
+      </thead>
+      
+      <tbody>
+        <% @tasks.each do |task| %>
+          <tr>
+            <td><%= link_to task.name, user_task_path(@user, task), id: "task-name" %></td>
+            <td><%= l(task.created_at, format: :long) %></td>
+            <td>
+              <%= link_to "編集", edit_user_task_path(@user, task), class: "btn btn-success" %>
+              <%= link_to "削除", user_task_path(@user, task), method: :delete, 
+              data: {confirm: "#{task.name}を削除します。よろしいですか？"}, class: "btn btn-danger" %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
     </div>
-  <% end %>
+  </div>
 </div>
