--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,1 +1,15 @@
-<h1>テスト</h1>
+<% provide(:title) %>
+
+<h1>タスク新規作成</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_with(model: @task, local: true) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
+
+      <%= f.label :description %>
+      <%= f.email_field :description, class: "form-control" %>
+    <% end %>
+  </div>  
+</div>
