--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -4,12 +4,16 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @task, local: true) do |f| %>
-      <%= f.label :name %>
+    <%= form_with(model: @task, url: user_tasks_path(@user), local: true) do |f| %>
+      <%= render partial: 'shared/error_messages', locals: { obj: @task } %>
+      
+      <%= f.label :name, class: "label-form" %>
       <%= f.text_field :name, class: "form-control" %>
 
-      <%= f.label :description %>
-      <%= f.email_field :description, class: "form-control" %>
+      <%= f.label :description, class: "label-form" %>
+      <%= f.text_area :description, :rows => "5", class: "form-control" %>
+      
+      <%= f.submit "新規作成", class: "btn btn-primary btn-lg btn-new-task" %>
     <% end %>
   </div>  
 </div>
