--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,1 +1,18 @@
+<% provide(:title) %>
+
 <h1>タスク編集</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_with(model: @task, url: user_task_path(@user), local: true, method: :patch) do |f| %>
+      <%= f.label :name, class: "label-form" %>
+      <%= f.text_field :name, class: "form-control" %>
+
+      <%= f.label :description, class: "label-form" %>
+      <%= f.text_area :description, :rows => "5", class: "form-control" %>
+      
+      <%= f.submit "更新", class: "btn btn-primary btn-lg btn-new-task" %>
+      <%= link_to  "キャンセル", user_tasks_path(@user,@task), class: "btn btn-default btn-lg btn-new-task" %>
+    <% end %>
+  </div>
+</div>
