--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -31,7 +31,7 @@
     
     <div>
       <%= link_to "編集", edit_user_task_path(@user,@task), class: "btn btn-lg btn-success" %>
-      <%= link_to "削除", user_tasks_path(@user,@task), method: :delete,
+      <%= link_to "削除", user_task_path(@user,@task), method: :delete,
       data: { confirm: "#{@task.name}を削除します。よろしいですか？" },
       class: "btn btn-lg btn-danger" %>
     </div>
